--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="">learning roadmap</a></li>
                 <li><a href="">project</a></li>
                 <li><a href="">mentors</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="">contact</a></li> 
             </ul>
             <button>dark mode</button>
         </div>
@@ -33,7 +33,7 @@
     </section>
     <section>
         <div class="container">
-            <h3>Industry Insights</h3>
+            <h1>Industry Insights</h1>
             <div>
                 <h2>Salary Trends</h2>
                 <p><strong>Junior Developer:</strong>&dollar; 60k-&dollar; 80k (US), &euro; 30k-&euro;45k (UK), ₹6L-₹10L (India)</p>
@@ -64,7 +64,7 @@
 
     <section>
         <div>
-            <h2>Frontend Tech Radar 2024</h2>
+            <h1>Frontend Tech Radar 2024</h1>
             <div>
                 <div>Trends</div>
                 <div>Tools</div>
@@ -79,6 +79,7 @@
             </div>
         </div>
     </section>
+
     <section>
         <div>
             <h1>Learning Roadmaps</h1>
@@ -123,6 +124,291 @@
                 </details>
             </div>
         </div>
+    
     </section>
+
+    <section>
+        <div>
+            <div>
+        <h2>Frontend Courses</h2>
+        <div>
+            <input type="text" placeholder="search courses">
+        </div>
+        <div>
+            <select>
+                <option value="all">All levels</option>
+                <option value="Biginner">Biginner</option>
+                <option value="Intermediate" >Intermediate</option>
+                <option value="Advanced"  >Advanced</option>
+            </select>
+        </div>
+        <button>add courses</button>
+    </div>
+
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Course</th>
+                <th>Difficulty</th>
+                <th>Duration</th>
+                <th>Salary Potential</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+  </div>
+   </section>
+
+    <section>
+        <div>
+            <h2>Project Showcase</h2>
+        </div>
+        <div>
+
+            <div>
+                <div>
+                    <img src="" alt="twitter logo">
+                </div>
+                <div> 
+                    <h2>Twitter UI Clone</h2>
+                    <p>Build a responsive Twitter interface with React and Tailwind CSS</p>
+                </div>
+                <div>
+                    <span>react</span>
+                    <span>tailwind</span>
+                    <span>Responsive</span>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <img src="" alt="spotify logo">
+                </div>
+                <div> 
+                    <h2>Spotify Player</h2>
+                    <p>Music player application with Spotify API integration</p>
+                </div>
+                <div>
+                    <span>JavaScript</span>
+                    <span>API</span>
+                    <span>CSS</span>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <img src="" alt="twitter logo">
+                </div>
+                <div> 
+                    <h2>E-commerce Dashboard</h2>
+                    <p>Admin dashboard for e-commerce with product management</p>
+                </div>
+                <div>
+                    <span>Vue</span>
+                    <span>Chart.js</span>
+                    <span>Firebase</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+        <div>
+            <h1>Meet Our Mentors</h1>
+        </div>
+        <diV>
+            <div>
+                <img src="" alt="">
+            </div>
+            <h2>Fatiha Abdurahim</h2>
+            <p>Fullstack developer</p>
+            <div>
+                <a href="">github</a>
+                <a href="">linkedin</a>
+            </div>
+        </diV>
+        <diV>
+            <div>
+                <img src="" alt="">
+            </div>
+            <h2>Dandi Hirko</h2>
+            <p>Fullstack developer</p>
+            <div>
+                <a href="">github</a>
+                <a href="">linkedin</a>
+            </div>
+        </diV>
+        <diV>
+            <div>
+                <img src="" alt="">
+            </div>
+            <h2>Nafargi Damena</h2>
+            <p>Fullstack developer and Visual Artis</p>
+            <div>
+                <a href="">github</a>
+                <a href="">linkedin</a>
+            </div>
+        </diV>
+    </div>
+
+    </section>
+
+    <section>
+        <div>
+            <h2>Interactive Elements</h2>
+        </div>
+        <div>
+            <div>
+                <h2>salary calculation</h2>
+                <div>
+                <label for="Experience">Years of Experience:</label>
+                <select name="" id="Experience">
+                    <option value="0-1">0-1</option>
+                    <option value="2-4">2-4</option>
+                    <option value="4-6">4-6</option>
+                </select>
+            </div>
+
+            <div>
+                <label for="Location">Location:</label>
+                <select name="" id="Location">
+                    <option value="">united states</option>
+                    <option value="">united Kingdom</option>
+                    <option value="">europe</option>
+                    <option value="">india</option>
+                    <option value="">remote</option>
+                </select>
+            </div>
+            <button>calculate</button>
+            </div>
+        </div>
+        <div>
+            <h2>Tech Quiz</h2>
+            <div>
+                <div>
+                    <p>Which framework suits your development style?</p>
+                </div>
+                <diV>
+                    <input  type="radio" name="quiz" id="">
+                    <label for="quiz">I prefer a large ecosystem with many solutions</label>
+                    <input  type="radio" name="quiz" id="">
+                    <label for="quiz">I want something balanced with good documentation</label>
+                    <input  type="radio" name="quiz" id="">
+                    <label for="quiz">I prefer minimal boilerplate and simplicity</label>
+                </diV>
+                <div>
+                    <button>submit</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h2>Frontend To-Do List</h2>
+            <div>
+                <h2>My Learning Tasks</h2>
+                <div>
+                    <input type="text" placeholder="add a new task....">
+                    <button>add</button>
+                </div>
+                <ul>
+
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h2>developer testimonial</h2>
+            <div>
+
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h2>Frontend Development Video</h2>
+            <div>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/watch?v=qz0aGYrrlhU&t=1s" frameborder="0"></iframe>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div>
+            <h2 >Contact Us</h2>
+    <form action="" method="POST">
+        <label for="name">Full Name: </label> <br>
+        <input type="text" id="name" name="name" required> <br>
+        <label for="email">Email: </label> <br>
+        <input type="text" id="email" name="email" required> <br>
+        <label for="Message">Message: </label> <br>
+        <textarea id="Message" name="Message" rows = "4" required> </textarea> <br>
+
+
+        <input type="submit" value="save" >
+
+
+    </form>
+        </div>
+    </section>
+    
+    <footer>
+        <div>
+            <div>
+                <h3>codecraft</h3>
+                <p>Your premier destination for frontend development resources, learning, and community.</p>
+            <div>
+                <a href="">twitter</a>
+                <a href="">github</a>
+                <a href="">youtube</a>
+                <a href="">linkedin</a>
+            </div>
+            </div>
+
+            <div>
+                <h3>Quick Links</h3>
+                <div>
+                <a href="">Home</a>
+                <a href="">Industry Insights</a>
+                <a href="">Technology Radar</a>
+                <a href="">Learning Roadmaps</a>
+                <a href="">Projects</a>
+            </div>
+            </div>
+
+            <div>
+                <h3>Resources</h3>
+            <div>
+                <a href="">Resource Library</a>
+                <a href="">Blog</a>
+                <a href="">Mentors</a>
+                <a href="">Interview Prep</a>
+                <a href="">Interactive Tools</a>
+            </div>
+            </div>
+
+            <div>
+                <h3>Legal</h3>
+            <div>
+                <a href="">github</a>
+                <a href="">linkedin</a>
+                <a href="">linkedin</a>
+                <a href="">linkedin</a>
+            </div>
+            </div>
+            <hr>
+            <div>
+                <p>© 2024 CodeCraft. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
